# crown-privatechat-crew

./: .env.example  .gitignore  pyproject.toml  tembo.md
.tembo/: 01-dashboard-setup-checklist.md  04-agent-handoff.md  README.md
.tembo/automation-suite/: automation-suite.reference.yml
.tembo/automation-suite/prompts/: auto-fix-ci.md  daily-slack-changelog.md  pr-review.md  security-scan.md  sentry-auto-fix.md
.tembo/scripts/: render-placeholders.sh
docs/: TROUBLESHOOTING.md
src/crown_privatechat_crew/: crew.py  main.py
src/crown_privatechat_crew/config/: agents.yaml  tasks.yaml
src/privatechat_crew/: crew.py  main.py
src/privatechat_crew/config/: agents.yaml  tasks.yaml
