[project]
name = "crown-privatechat-crew"
version = "1.0.0"
description = "Crown PrivateChat Crew - Signal-grade privacy features on Tencent Cloud IM"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
